# StockAnalyst

./: .env-example  .gitignore  README.MD  api.py  app.py  index.html  pyproject.toml
.chainlit/: config.toml
notebooks/: 1. basic_sql_query_pipeline.ipynb  2. agent_stocks.ipynb  3. agentrunner.ipynb  4. Voice.ipynb  99. Test_streaming.ipynb
public/: test.css
src/: utils.py
