[tool.poetry]
name = "ifactoryassistant"
version = "0.1.0"
description = "LLM driven assistant for iFactory"
authors = ["Titus Lim"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
llama-index = "^0.10.34"
llama-index-embeddings-huggingface = "^0.2.0"
sqlalchemy = "^2.0.30"
llama-index-embeddings-bedrock = "^0.1.5"
boto3 = "^1.34.98"
pandas = "^2.2.2"
pyvis = "^0.3.2"
ipykernel = "^6.29.4"
tqdm = "^4.66.4"
iprogress = "^0.4"
jupyter = "^1.0.0"
llama-index-llms-bedrock = "^0.1.7"
yfinance = "^0.2.38"
llama-index-agent-introspective = "^0.1.1"
llama-index-tools-tavily-research = "^0.1.3"
llama-index-agent-lats = "^0.1.0"
llama-index-packs-agents-lats = "^0.1.0"
chainlit = "1.1.0rc1"
fastapi = "0.110.3"
openai = "^1.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
